# pytrends-modern

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: test.yaml
examples/: README.md  advanced_usage.py  basic_usage.py
pytrends_modern/: __init__.py  cli.py  config.py  exceptions.py  request.py  rss.py  scraper.py  utils.py
tests/: conftest.py  test_basic.py
