[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytrends-modern"
version = "0.1.2"
description = "Modern Google Trends API - Combining the best of pytrends, with RSS feeds, Selenium scraping, and enhanced features"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "pytrends-modern contributors"}
]
keywords = ["google", "trends", "api", "data", "scraping", "selenium", "rss"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "requests>=2.28.0",
    "pandas>=1.5.0",
    "lxml>=4.9.0",
]

[project.optional-dependencies]
selenium = [
    "selenium>=4.0.0",
    "webdriver-manager>=4.0.0",
]
cli = [
    "click>=8.0.0",
    "rich>=13.0.0",
]
export = [
    "pyarrow>=10.0.0",  # for parquet
    "openpyxl>=3.0.0",  # for excel
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-vcr>=1.0.2",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
all = [
    "pytrends-modern[selenium,cli,export]",
]

[project.urls]
Homepage = "https://github.com/yiromo/pytrends-modern"
Documentation = "https://github.com/yiromo/pytrends-modern#readme"
Repository = "https://github.com/yiromo/pytrends-modern"
Issues = "https://github.com/yiromo/pytrends-modern/issues"

[project.scripts]
pytrends-modern = "pytrends_modern.cli:main"

[tool.setuptools]
packages = ["pytrends_modern"]

[tool.setuptools.package-data]
pytrends_modern = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=pytrends_modern --cov-report=term-missing"

[tool.uv.workspace]
members = [
    "test_space",
]
